# datacosmos-sdk

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  datacosmos-sdk.code-workspace  geoapp-sdk.code-workspace  pyproject.toml  requirements.txt  test_project_ops.py
.github/workflows/: lint.yaml  main.yaml  test.yaml
config/: __init__.py  config.py
config/models/: __init__.py  m2m_authentication_config.py  url.py
datacosmos/: __init__.py  auth.py  client.py  const.py  datacosmos.py  datacosmos_client.py  errors.py
datacosmos/auth/: __init__.py  base_authenticator.py  local_authenticator.py  local_token_fetcher.py  m2m_authenticator.py  token.py
datacosmos/config/: __init__.py  config.py  constants.py  environment.py
datacosmos/config/auth/: __init__.py  factory.py
datacosmos/config/loaders/: yaml_source.py
datacosmos/config/models/: authentication_config.py  local_user_account_authentication_config.py  m2m_authentication_config.py  no_authentication_config.py  url.py
datacosmos/constants/: constellations.py  levels.py  satellites.py  urls.py
datacosmos/exceptions/: __init__.py  authentication_error.py  collection_error.py  datacosmos_error.py  datacosmos_exception.py  delete_error.py  http_error.py  item_error.py  stac_validation_error.py  stac_validation_exception.py  storage_error.py  upload_error.py
datacosmos/stac/: __init__.py  item.py  search.py  stac_client.py
datacosmos/stac/collection/: __init__.py  collection_client.py
datacosmos/stac/collection/models/: __init__.py  collection_update.py  item_asset_definition.py
datacosmos/stac/constants/: __init__.py  satellite_name_mapping.py
datacosmos/stac/enums/: __init__.py  level.py  processing_level.py  product_type.py  season.py
datacosmos/stac/item/: __init__.py  item_client.py
datacosmos/stac/item/models/: __init__.py  asset.py  band.py  catalog_search_parameters.py  datacosmos_item.py  eo_band.py  (+5 more)
datacosmos/stac/models/: item_update.py  search_parameters.py
datacosmos/stac/project/: __init__.py  project_item_client.py
datacosmos/stac/storage/: __init__.py  downloader.py  storage_base.py  storage_client.py  uploader.py
datacosmos/stac/validation/: __init__.py  license.py
datacosmos/storage/: __init__.py  storage_client.py
datacosmos/storage/models/: __init__.py  storage_path.py
datacosmos/uploader/: __init__.py  datacosmos_uploader.py
datacosmos/uploader/dataclasses/: upload_path.py
datacosmos/utils/: __init__.py  constants.py  missions.py  url.py
datacosmos/utils/http_response/: __init__.py  check_api_response.py
k8s-test/: README.md  test-job.yaml  test-k8s-detection.py
testdata/001_search_simple/: results.json
testdata/002_search_pagination/: page_1.json  page_2.json
tests/: __init__.py  conftest.py  test_auth.py  test_pass.py  test_stac_search.py
tests/bdd/: __init__.py  conftest.py
tests/bdd/features/: authentication.feature  collections.feature  error_handling.feature  items.feature  projects.feature  storage.feature  validation.feature
tests/bdd/step_defs/: __init__.py  conftest.py  test_authentication.py  test_collections.py  test_error_handling.py  test_items.py  test_projects.py  test_storage.py  test_validation.py
tests/unit/auth/: test_local_token_fetcher.py  test_token.py
tests/unit/config/: test_config.py
(+94 files in other folders)
