[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datacosmos-sdk"
version = "0.0.1" 
authors = [
    { name="Open Cosmos", email="support@open-cosmos.com" },
]
description = "A library for interacting with DataCosmos from Python code"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
test = [
    "black==22.12.0",
    "flake8==6.0.0",
    "pytest==7.2.0",
    "bandit[toml]==1.7.4",
    "isort==5.11.4",
    "pydocstyle==6.1.1",
    "flake8-cognitive-complexity==0.1.0",
]

[tool.setuptools.packages]
find = {}

[tool.bandit]


[tool.pydocstyle]
convention = "google"

[tool.flake8]
ignore = "E501"
