[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datacosmos"
version = "0.0.1"
authors = [
    { name="Open Cosmos", email="support@open-cosmos.com" },
]
description = "A library for interacting with DataCosmos from Python code"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
    "pydantic_settings>=2.7.0",
    "python-common==1.4.0",
    "black==22.3.0",
    "flake8==4.0.1",
    "pytest==7.2.0",
    "bandit[toml]==1.7.4",
    "isort==5.11.4",
    "pydocstyle==6.1.1",
    "flake8-cognitive-complexity==0.1.0",
    "requests==2.31.0",
    "oauthlib==3.2.0",
    "requests-oauthlib==1.3.1",
    "pydantic==2.10.6",
    "pystac==1.12.1",
    "shapely==1.8.0",
    "importlib-metadata==4.8.3"
]

[tool.bandit]

[tool.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.uv.sources]
python-common = { index = "gitlab" }

[[tool.uv.index]]
name = "gitlab"
url = "https://git.o-c.space/api/v4/projects/689/packages/pypi/simple"