[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datacosmos"
version = "0.0.24"
authors = [
    { name="Open Cosmos", email="support@open-cosmos.com" },
]
description = "A library for interacting with DataCosmos from Python code"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
    "pydantic_settings>=2.7.0",
    "requests==2.31.0",
    "oauthlib==3.2.0",
    "requests-oauthlib==2",
    "pydantic>=2",
    "pystac==1.12.1",
    "pyyaml==6.0.2",
    "structlog==24.4.0",
    "tenacity>=8.2.3",
    "shapely>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "black==22.3.0",
    "ruff==0.9.5",
    "pytest==7.2.0",
    "bandit[toml]==1.7.4",
    "pbr>=6.0.0",
    "isort==5.11.4",
    "pydocstyle==6.1.1"
]

[tool.setuptools.packages.find]
include = ["datacosmos*"]

[tool.bandit]
exclude_dirs = [".venv"]

[tool.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88